Use "List.of"