@@ -2,8 +2,6 @@ package dgroomes.boggle;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import static dgroomes.testing.Assertions.assertThat;
@@ -13,13 +11,13 @@ public class WordFinderTest {
     @Test
     public void doIt() {
         // Arrange
-        BoggleBoard board = BoggleBoardTest.makeBoard();
-        WordFinder wordFinder = new WordFinder(board, Dictionary.createDictionary());
+        var board = BoggleBoardTest.makeBoard();
+        var wordFinder = new WordFinder(board, Dictionary.createDictionary());
 
         // Act
-        Set<String> foundWords = wordFinder.findWords();
+        var foundWords = wordFinder.findWords();
 
         // Assert
-        assertThat(foundWords).isEqualTo(new HashSet<>(Arrays.asList("it", "is", "its", "zit", "zits", "sit")));
+        assertThat(foundWords).isEqualTo(Set.of("it", "is", "its", "zit", "zits", "sit"));
     }
 }
